@@ -119,6 +119,8 @@ php_apache_sapi_header_handler(sapi_header_struct *sapi_header, sapi_header_op_e
 					efree(ctx->content_type);
 				}
 				ctx->content_type = estrdup(val);
+                       } else if (!strcasecmp(sapi_header->header, "content-length")) {
+                               ap_set_content_length(ctx->r, strtol(val, (char **)NULL, 10));
 			} else if (op == SAPI_HEADER_REPLACE) {
 				apr_table_set(ctx->r->headers_out, sapi_header->header, val);
 			} else {
